header componentleri eklendi

--- a/index.html
+++ b/index.html
@@ -8,7 +8,42 @@
 </head>
 <body>
     <div class="container-posivitus">
-        
+        <header>
+            <div class="logo-section">
+                <a href="#"><img src="assets/images/posivitus-logo-blck.svg" alt="main-logo"></a>
+            </div>
+            <div class="header-links">
+                <ul>
+                    <li><a href="">Hakkımızda</a></li>
+                    <li><a href="">Servisler</a></li>
+                    <li><a href="">Kullanım Senaryoları</a></li>
+                    <li><a href="">Fiyatlandırma</a></li>
+                    <li><a href="">Blog</a></li>
+                </ul>
+            </div>
+            <!--Modal Buton-->
+            <button id="menu-btn" class="menu-btn">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <!--MODAL MENU-->
+            <div id="menu-modal" class="menu-modal">
+                <button id="close-btn" class="close-btn">&times;</button>
+                <nav>
+                    <ul>
+                        <li><a href="">Hakkımızda</a></li>
+                        <li><a href="">Servisler</a></li>
+                        <li><a href="">Kullanım Senaryoları</a></li>
+                        <li><a href="">Fiyatlandırma</a></li>
+                        <li><a href="">Blog</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <section>
+
+        </section>
     </div>
 </body>
 </html>
