--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/landing.css">
+    <script src="assets/js/modal.js" defer></script>
     <title>Posivitus Landingpage</title>
 </head>
 <body>
