ilk sıra content eklendi

--- a/index.html
+++ b/index.html
@@ -43,7 +43,16 @@
             </div>
         </header>
         <section>
-
+            <div class="section-content-1">
+                <div class="content-1-top">
+                    <h2>Başarı için dijital ortamda gezinti</h2>
+                    <img src="assets/images/Illustration.svg" alt="">
+                </div>
+                <div class="content-1-bot">
+                    <h2>Dijital pazarlama ajansımız, SEO, PPC, sosyal medya pazarlaması ve içerik oluşturma gibi bir dizi hizmet aracılığıyla işletmelerin çevrimiçi ortamda büyümelerine ve başarılı olmalarına yardımcı oluyor.</h2>
+                    <button>Danışma için rezervasyon yaptırın</button>
+                </div>
+            </div>
         </section>
     </div>
 </body>
