servis içerikleri eklendi

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img src="assets/images/Illustration.svg" alt="">
                 </div>
                 <div class="content-1-bot">
-                    <h2>Dijital pazarlama ajansımız, SEO, PPC, sosyal medya pazarlaması ve içerik oluşturma gibi bir dizi hizmet aracılığıyla işletmelerin çevrimiçi ortamda büyümelerine ve başarılı olmalarına yardımcı oluyor.</h2>
+                    <h2>Dijital pazarlama ajansımız, SEO, PPC, sosyal medya pazarlaması ve içerik oluşturma gibi bir dizi hizmet aracılığıyla işletmelerin çevrimiçi ortamda büyümelerine ve başarılı olmalarına yardımcı oluyoruz.</h2>
                     <button>Danışma için rezervasyon yaptırın</button>
                 </div>
             </div>
@@ -126,6 +126,25 @@
                           </clipPath>
                         </defs>
                       </svg>
+                </div>
+            </div>
+            <div class="section-content-3">
+                <div class="services-top">
+                    <h3>Servisler</h3>
+                    <h4>Dijital pazarlama ajansımızda, işletmelerin çevrimiçi ortamda büyümelerine ve başarılı olmalarına yardımcı olmak için bir dizi hizmet sunuyoruz. Bu hizmetler şunları içerir:</h4>
+                </div>
+                <div class="services-bot">
+                    <img src="assets/images/search-engine.svg" alt="search-engine">
+                    <img src="assets/images/click-per-pay.svg" alt="click-pay">
+                    <img src="assets/images/social-media.svg" alt="">
+                    <img src="assets/images/mail-marketing.svg" alt="">
+                    <img src="assets/images/content-create.svg" alt="">
+                    <img src="assets/images/analytcs.svg" alt="">
+                    <div class="services-proposal">
+                        <h4>Haydi, bir şeyler yapalım</h4>
+                        <h5>Dijital pazarlama hizmetlerimizin işletmenizin çevrimiçi ortamda büyümesine ve başarılı olmasına nasıl yardımcı olabileceği hakkında daha fazla bilgi edinmek için bugün bize ulaşın.</h5>
+                        <button class="btn-proposal">Teklifinizi alın</button>
+                    </div>
                 </div>
             </div>
         </section>
