case bolumu eklendi. Mobil tasarim %75 i bitti

--- a/index.html
+++ b/index.html
@@ -147,6 +147,28 @@
                     </div>
                 </div>
             </div>
+            <div class="section-content-4">
+              <div class="case-studies">
+                <h2>Örnek İncelemeleri</h2>
+                <p>Kanıtlanmış Dijital Pazarlama Başarımızın Gerçek Hayattan Örneklerini Vaka Çalışmalarımızla Keşfedin</p>
+              </div>
+              <div class="case-studies-exams">
+                <div class="exams">
+                  <p>Yerel bir restoran için, web sitesi trafiğinde %50 ve satışlarda %25 artışla sonuçlanan hedefli bir PPC kampanyası uyguladık.</p>
+                  <a href="#">Learn More <img src="assets/images/arrow.svg" alt="arrow"></a>
+                </div>
+                <span class="line"><svg width="186" height="1" xmlns="http://www.w3.org/2000/svg"><rect width="180" height="1" fill="#fff"/></svg></span>
+                <div class="exams">
+                  <p>Bir B2B yazılım şirketi için, anahtar kelimeler için ilk sayfa sıralaması ve organik trafikte %200 artış sağlayan bir SEO stratejisi geliştirdik.</p>
+                  <a href="#">Learn More <img src="assets/images/arrow.svg" alt="arrow"></a>
+                </div>
+                <span class="line"><svg width="186" height="1" xmlns="http://www.w3.org/2000/svg"><rect width="180" height="1" fill="#fff"/></svg></span>
+                <div class="exams">
+                  <p>Ulusal bir perakende zinciri için takipçi sayısını %25 artıran ve online satışlarda %20 artış sağlayan bir sosyal medya pazarlama kampanyası oluşturduk.</p>
+                  <a href="#">Learn More <img src="assets/images/arrow.svg" alt="arrow"></a>
+                </div>
+              </div>
+              </div>
         </section>
     </div>
 </body>
