--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/landing.css">
-    <script src="assets/js/modal.js" defer></script>
+    <link rel="stylesheet" href="assets/css/accordion.css">
+    <script src="assets/js/modal.js" ></script>
+    <script src="assets/js/accordion.js" defer></script>
     <title>Posivitus Landingpage</title>
 </head>
 <body>
@@ -168,7 +170,65 @@
                   <a href="#">Learn More <img src="assets/images/arrow.svg" alt="arrow"></a>
                 </div>
               </div>
+            </div>
+            <div class="section-content-5">
+              <div class="accordion">
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <span class="number">01</span> Konsültasyon
+                        <span class="icon">+</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p>İlk danışma görüşmesi sırasında iş hedeflerinizi ve amaçlarınızı, hedef kitlenizi ve mevcut pazarlama çabalarınızı tartışacağız. Bu, ihtiyaçlarınızı anlamamızı ve hizmetlerimizi gereksinimlerinize en iyi şekilde uyacak şekilde uyarlamamızı sağlayacaktır.</p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <span class="number">02</span> Araştırma ve Strateji Geliştirme
+                        <span class="icon">+</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p>Content goes here...</p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <span class="number">03</span> Uygulama
+                        <span class="icon">+</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p>Content goes here...</p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <div class="accordion-header">
+                        <span class="number">04</span> İzleme ve Optimizasyon
+                        <span class="icon">+</span>
+                    </div>
+                    <div class="accordion-content">
+                        <p>Content goes here...</p>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                  <div class="accordion-header">
+                      <span class="number">05</span> Raporlama ve İletişim
+                      <span class="icon">+</span>
+                  </div>
+                  <div class="accordion-content">
+                      <p>Content goes here...</p>
+                  </div>
               </div>
+              <div class="accordion-item">
+                <div class="accordion-header">
+                    <span class="number">06</span> Sürekli İyileştirme
+                    <span class="icon">+</span>
+                </div>
+                <div class="accordion-content">
+                    <p>Content goes here...</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
     </div>
 </body>
