ekip gorselleri eklendi, css calismasi yapildi

--- a/index.html
+++ b/index.html
@@ -229,6 +229,115 @@
               </div>
             </div>
             </div>
+            <div class="section-content-6">
+              <div class="team-text">
+                <h2>Çalışma Ekibimiz</h2>
+                <p>Başarılı dijital pazarlama stratejilerimizin arkasındaki yetenekli ve deneyimli ekibimizle tanışın</p>
+              </div>
+              <div class="team-cards-section">
+                <div class="team-cards-top">
+                  <div class="team-card-box">
+                    <div class="team-card">
+                      <div class="card-title">
+                        <img src="assets/images/team/john-smith.svg" alt="john-smith">
+                        <span class="title-name">
+                          <h3>Berker KAYA</h3>
+                          <p>CEO ve Kurucu</p>
+                        </span>
+                        <a href="https://www.linkedin.com/in/onuresin/" target="_blank"><img src="assets/images/linkedin.svg" alt="linkedIN"></a>
+                      </div>
+                      <span class="black-line"></span>
+                      <div class="card-experiment">
+                        <p>Dijital pazarlama alanında 10+ yıllık deneyim. SEO, PPC ve içerik stratejisinde uzmanlık</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="team-card-box">
+                    <div class="team-card">
+                      <div class="card-title">
+                        <img src="assets/images/team/jane-doe.svg" alt="jane-doe">
+                        <span class="title-name">
+                          <h3>Esmeray GÖKMEN</h3>
+                          <p>Operasyon Direktörü</p>
+                        </span>
+                        <a href="https://www.linkedin.com/in/onuresin/" target="_blank"><img src="assets/images/linkedin.svg" alt="linkedIN"></a>
+                      </div>
+                      <span class="black-line"></span>
+                      <div class="card-experiment">
+                        <p>Proje yönetimi ve ekip liderliğinde 7+ yıllık deneyim. Güçlü organizasyon ve iletişim becerileri</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="team-card-box">
+                    <div class="team-card">
+                      <div class="card-title">
+                        <img src="assets/images/team/michaelbrown.svg" alt="john-smith">
+                        <span class="title-name">
+                          <h3>Cem ŞANIŞER</h3>
+                          <p>Kıdemli SEO Uzmanı</p>
+                        </span>
+                        <a href="https://www.linkedin.com/in/onuresin/" target="_blank"><img src="assets/images/linkedin.svg" alt="linkedIN"></a>
+                      </div>
+                      <span class="black-line"></span>
+                      <div class="card-experiment">
+                        <p>Dijital pazarlama alanında 10+ yıllık deneyim. SEO, PPC ve içerik stratejisinde uzmanlık</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="team-cards-bot">
+                  <div class="team-card-box">
+                    <div class="team-card">
+                      <div class="card-title">
+                        <img src="assets/images/team/emily-johnson.svg" alt="umay-aktas">
+                        <span class="title-name">
+                          <h3>Umay AKTAŞ</h3>
+                          <p>PPC Yöneticisi</p>
+                        </span>
+                        <a href="https://www.linkedin.com/in/onuresin/" target="_blank"><img src="assets/images/linkedin.svg" alt="linkedIN"></a>
+                      </div>
+                      <span class="black-line"></span>
+                      <div class="card-experiment">
+                        <p>Ücretli arama reklamcılığında 3+ yıllık deneyim. Kampanya yönetimi ve performans analizi konusunda yetenekli</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="team-card-box brian">
+                    <div class="team-card">
+                      <div class="card-title">
+                        <img src="assets/images/team/brian-williams.svg" alt="yağız-ateşbaş">
+                        <span class="title-name">
+                          <h3>Yağız ATEŞBAŞ</h3>
+                          <p>Sosyal Medya Uzmanı</p>
+                        </span>
+                        <a href="https://www.linkedin.com/in/onuresin/" target="_blank"><img src="assets/images/linkedin.svg" alt="linkedIN"></a>
+                      </div>
+                      <span class="black-line"></span>
+                      <div class="card-experiment">
+                        <p>Sosyal medya pazarlamasında 4+ yıllık deneyim. İçerik oluşturma ve zamanlama, metrikleri analiz etme ve etkileşim oluşturma konusunda yetkin</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="team-card-box sarah">
+                    <div class="team-card">
+                      <div class="card-title">
+                        <img src="assets/images/team/sarah-kim.svg" alt="saliha-ozdemir">
+                        <span class="title-name">
+                          <h3>Saliha ÖZDEMİR</h3>
+                          <p>İçerik Üreticisi</p>
+                        </span>
+                        <a href="https://www.linkedin.com/in/onuresin/" target="_blank"><img src="assets/images/linkedin.svg" alt="linkedIN"></a>
+                      </div>
+                      <span class="black-line"></span>
+                      <div class="card-experiment">
+                        <p>2 yıldan fazla yazma ve düzenleme deneyimi ve çeşitli sektörler için ilgi çekici SEO için optimize edilmiş içerik oluşturma becerisi</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button>Bütün Ekibi Gör</button>
+            </div>
         </section>
     </div>
 </body>
