footer bolumu kismen eklendi

--- a/index.html
+++ b/index.html
@@ -391,7 +391,17 @@
             </div>
             
             </div>
+            <div class="section-content-8">
+
+            </div>
         </section>
+        <footer>
+          <div class="footer-inner">
+            <div class="footer-logo">
+              <img src="assets/images/positivus-white-logo.svg" alt="">
+            </div>
+          </div>
+        </footer>
     </div>
 </body>
 </html>
