footer bolumu mobilde tamamlandi

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <span class="icon">+</span>
                     </div>
                     <div class="accordion-content">
-                        <p>İşletmenizin hedeflerine ulaşmak için kapsamlı bir araştırma yapacağız. Bu süreçte, hedef kitlenizin davranışlarını, rakiplerinizin stratejilerini ve sektör trendlerini analiz edeceğiz. Elde edilen veriler ışığında, size özel bir pazarlama stratejisi geliştirerek, en etkili yöntemleri belirleyeceğiz. Bu adım, başarılı bir uygulama için temel oluşturacaktır.</p>
+                        <p>İşletmenizin hedeflerine ulaşması için kapsamlı bir araştırma yapacağız. Bu süreçte, hedef kitlenizin davranışlarını, rakiplerinizin stratejilerini ve sektör trendlerini analiz edeceğiz. Elde edilen veriler ışığında, size özel bir pazarlama stratejisi geliştirerek, en etkili yöntemleri belirleyeceğiz. Bu adım, başarılı bir uygulama için temel oluşturacaktır.</p>
                     </div>
                 </div>
                 <div class="accordion-item">
@@ -397,8 +397,53 @@
         </section>
         <footer>
           <div class="footer-inner">
-            <div class="footer-logo">
-              <img src="assets/images/positivus-white-logo.svg" alt="">
+            <div class="footer-top">
+              <div class="footer-logo">
+                <img src="assets/images/positivus-white-logo.svg" alt="">
+              </div>
+              <div class="footer-links">
+                <li>
+                  <a href="#">Hakkımızda</a>
+                  <a href="#">Servislerimiz</a>
+                  <a href="#">Örnek İncelemeleri</a>
+                  <a href="#">Fiyatlandırma</a>
+                </li>
+              </div>
+              <div class="footer-social-media desktop">
+                <a href="https://www.linkedin.com/in/onuresin/" target="_blank"><img src="assets/images/linkedIN-white.svg" alt="linkedIN"></a>
+                <a href="https://www.facebook.com/onuresin/" target="_blank"><img src="assets/images/facebook-white.svg" alt="facebook"></a>
+                <a href="https://twitter.com/onuresin" target="_blank"><img src="assets/images/twitter-white.svg" alt="twitter"></a>
+              </div>
+            </div>
+            <div class="footer-bot">
+              <div class="footer-contacts">
+                <h3>Bize Ulaşın:</h3>
+                <span class="contact-p">
+                  <p>Mail: info@positivus.com</p>
+                  <p>Telefon: 0850 492 1923</p>
+                  <p>Adres: 1325.Cadde, Aytaşı Sokağı, Yıldız Tozu Kuleleri 34598</p>
+                </span>
+              </div>
+              <div class="footer-mail-subs">
+                <form>
+                  <input type="text" name="mail" placeholder="E-posta adresinizi girin">
+                  <button>Haberdar Olun</button>
+                </form>
+              </div>
+              <div class="footer-social-media mobile-links">
+                <a href="https://www.linkedin.com/in/onuresin/" target="_blank"><img src="assets/images/linkedIN-white.svg" alt="linkedIN"></a>
+                <a href="https://www.facebook.com/onuresin/" target="_blank"><img src="assets/images/facebook-white.svg" alt="facebook"></a>
+                <a href="https://twitter.com/onuresin" target="_blank"><img src="assets/images/twitter-white.svg" alt="twitter"></a>
+              </div>
+            </div>
+            <div class="footer-deep">
+              <div class="footer-line">
+
+              </div>
+              <div class="footer-last-section">
+                <p>© 2025 Positivus. Tüm Hakları Saklıdır.</p>
+                <a href="#">Privacy Policy</a>
+              </div>
             </div>
           </div>
         </footer>
