--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="content-1-bot">
                     <h2>Dijital pazarlama ajansımız, SEO, PPC, sosyal medya pazarlaması ve içerik oluşturma gibi bir dizi hizmet aracılığıyla işletmelerin çevrimiçi ortamda büyümelerine ve başarılı olmalarına yardımcı oluyoruz.</h2>
-                    <button>Danışma için rezervasyon yaptırın</button>
+                    <button>Bilgi almak için rezervasyon yaptırın</button>
                 </div>
             </div>
             <div class="section-content-2">
