desktop section 1 tamamalandı

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
                 <a href="#"><img src="assets/images/posivitus-logo-blck.svg" alt="main-logo"></a>
             </div>
             <div class="header-links">
-                <ul>
+                <div class="links-inner">
+                  <ul>
                     <li><a href="">Hakkımızda</a></li>
                     <li><a href="">Servisler</a></li>
-                    <li><a href="">Kullanım Senaryoları</a></li>
                     <li><a href="">Fiyatlandırma</a></li>
                     <li><a href="">Blog</a></li>
                 </ul>
+                <button>Teklif Al</button>
+                </div>
             </div>
             <!--Modal Buton-->
             <button id="menu-btn" class="menu-btn">
@@ -59,6 +61,17 @@
                     <h2>Dijital pazarlama ajansımız, SEO, PPC, sosyal medya pazarlaması ve içerik oluşturma gibi bir dizi hizmet aracılığıyla işletmelerin çevrimiçi ortamda büyümelerine ve başarılı olmalarına yardımcı oluyoruz.</h2>
                     <button>Rezervasyon İçin Tıklayın</button>
                 </div>
+            </div>
+            <div class="section-content-1-desktop">
+                <div class="desktop-left">
+                  <h2>Başarı için dijital ortamda gezinti</h2>
+                  <h3>Dijital pazarlama ajansımız, SEO, PPC, sosyal medya pazarlaması ve içerik oluşturma gibi bir dizi hizmet aracılığıyla işletmelerin çevrimiçi ortamda büyümelerine ve başarılı olmalarına yardımcı oluyoruz.</h3>
+                  <button>Rezervasyon</button>
+                </div>
+                <div class="desktop-right">
+                  <img src="assets/images/Illustration.svg" alt="">
+                </div>
+
             </div>
             <div class="section-content-2">
                 <div class="company-top">
