section 3 desktop css düzeltmeleri yapıldı

--- a/index.html
+++ b/index.html
@@ -154,12 +154,14 @@
                     <h4>Dijital pazarlama ajansımızda, işletmelerin çevrimiçi ortamda büyümelerine ve başarılı olmalarına yardımcı olmak için bir dizi hizmet sunuyoruz. Bu hizmetler şunları içerir:</h4>
                 </div>
                 <div class="services-bot">
-                    <img src="assets/images/search-engine.svg" alt="search-engine">
-                    <img src="assets/images/click-per-pay.svg" alt="click-pay">
-                    <img src="assets/images/social-media.svg" alt="">
-                    <img src="assets/images/mail-marketing.svg" alt="">
-                    <img src="assets/images/content-create.svg" alt="">
-                    <img src="assets/images/analytcs.svg" alt="">
+                    <div class="services-bot-group">
+                      <img src="assets/images/search-engine.svg" alt="search-engine">
+                      <img src="assets/images/click-per-pay.svg" alt="click-pay">
+                      <img src="assets/images/social-media.svg" alt="">
+                      <img src="assets/images/mail-marketing.svg" alt="">
+                      <img src="assets/images/content-create.svg" alt="">
+                      <img src="assets/images/analytcs.svg" alt="">
+                    </div>
                     <div class="services-proposal">
                         <h4>Haydi, bir şeyler yapalım</h4>
                         <h5>Dijital pazarlama hizmetlerimizin işletmenizin çevrimiçi ortamda büyümesine ve başarılı olmasına nasıl yardımcı olabileceği hakkında daha fazla bilgi edinmek için bugün bize ulaşın.</h5>
