section content 3 desktop düzenlemesi yapıldı

--- a/index.html
+++ b/index.html
@@ -163,9 +163,14 @@
                       <img src="assets/images/analytcs.svg" alt="">
                     </div>
                     <div class="services-proposal">
-                        <h4>Haydi, bir şeyler yapalım</h4>
-                        <h5>Dijital pazarlama hizmetlerimizin işletmenizin çevrimiçi ortamda büyümesine ve başarılı olmasına nasıl yardımcı olabileceği hakkında daha fazla bilgi edinmek için bugün bize ulaşın.</h5>
-                        <button class="btn-proposal">Teklifinizi alın</button>
+                        <div class="proposal-inner">
+                          <h4>Haydi, bir şeyler yapalım</h4>
+                          <h5>Dijital pazarlama hizmetlerimizin işletmenizin çevrimiçi ortamda büyümesine ve başarılı olmasına nasıl yardımcı olabileceği hakkında daha fazla bilgi edinmek için bugün bize ulaşın.</h5>
+                          <button class="btn-proposal">Teklifinizi alın</button>
+                        </div>
+                        <div class="service-desktop">
+                          <img src="assets/images/make-this-happen.svg" alt="make-this-hppn">
+                        </div>
                     </div>
                 </div>
             </div>
