section 5 ve accordion tarafı desktop düzenlendi

--- a/index.html
+++ b/index.html
@@ -185,11 +185,13 @@
                   <a href="#">Daha fazlasını öğren <img src="assets/images/arrow.svg" alt="arrow"></a>
                 </div>
                 <span class="line"><svg width="186" height="1" xmlns="http://www.w3.org/2000/svg"><rect width="180" height="1" fill="#fff"/></svg></span>
+                <span class="line-vert"></span>
                 <div class="exams">
                   <p>Bir B2B yazılım şirketi için, anahtar kelimeler için ilk sayfa sıralaması ve organik trafikte %200 artış sağlayan bir SEO stratejisi geliştirdik.</p>
                   <a href="#">Daha fazlasını öğren <img src="assets/images/arrow.svg" alt="arrow"></a>
                 </div>
                 <span class="line"><svg width="186" height="1" xmlns="http://www.w3.org/2000/svg"><rect width="180" height="1" fill="#fff"/></svg></span>
+                <span class="line-vert"></span>
                 <div class="exams">
                   <p>Ulusal bir perakende zinciri için takipçi sayısını %25 artıran ve online satışlarda %20 artış sağlayan bir sosyal medya pazarlama kampanyası oluşturduk.</p>
                   <a href="#">Daha fazlasını öğren <img src="assets/images/arrow.svg" alt="arrow"></a>
